--- a/Sam/css/style.css
+++ b/Sam/css/style.css
@@ -3,9 +3,39 @@ h1 {
     margin: 20px;
 }
 form {
-    margin: 15px;
+    margin: auto;
     background-color: #e3f2fd;
+    width: 60%;
 }
 #startingDestination, #finalDestination {
     font-weight: bold;
+}
+#finalDirections {
+  
+    font-weight: bold;
+    background-color: #e3f2fd;
+    width: 60%;
+    margin: auto;
+    margin-top: 20px;
+    border-style: double;
+  
+}
+.form-group {
+    margin: 10px;
+    margin-top: 20px;
+}
+#submit {
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+#startingDestination {
+    margin-top: 10px;
+}
+
+.row {
+    margin: auto;
+    padding: 8px;
+}
+.street {
+    color: red;
 }
